--- a/aula2.html
+++ b/aula2.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
- <h1>Resultado:
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aula2</title>
 
+    </head>
 
-</h1>
+    <body>
+        <h1>Resultado:</h1>
+        <script>
 
- <script> var nome = (window.prompt("qual o seu nome")) 
-window.alert("seja bem-vindo "+nome)
- document.write(`${nome}`)
- </script>
-
+            var nome = (window.prompt("qual o seu nome"))
+            window.alert("seja bem-vindo "+nome)
+            document.write(`${nome}`)
+        </script>
+    </body>
 
 </body>
+
 </html>
